# autodoc-adk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  autodoc-architecture.html  claude-cli.md  prefect.yaml  pyproject.toml
.claude/: launch.json  settings.json
.claude/prompts/: e2e-feature.prompt.md
.github/workflows/: ci.yml  playwright-live.yml  playwright-nightly.yml
.serena/: project.yml
.specify/memory/: constitution.md
autodoc-adk-docs/: ARCHITECTURE.md  PROMPTS.md
deployment/: Makefile  docker-compose.yml
deployment/docker/: Dockerfile.api  Dockerfile.flow  Dockerfile.web  Dockerfile.worker  docker-compose.dev.yml  nginx-web.conf.template
deployment/k8s/: README.md
deployment/scripts/: init-db.sql
docs/plans/: 2026-02-03-autodoc-adk-structure-design-v2.md  2026-02-18-flow-task-serialization-design.md  2026-02-18-flow-task-serialization-plan.md
docs/research/: High-accuracy RAG for technical Markdown documentation.md
specs/001-autodoc-adk-docgen/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: errors.py  main.py  mcp_server.py
src/agents/: AGENTS.md  __init__.py  base.py
src/api/: AGENTS.md  app.py  dependencies.py
src/config/: AGENTS.md  models.py  settings.py  telemetry.py
src/database/: AGENTS.md  engine.py
src/flows/: AGENTS.md  __init__.py  full_generation.py  incremental_update.py  schemas.py  scope_processing.py
src/providers/: AGENTS.md  __init__.py  base.py  bitbucket.py  github.py
src/services/: AGENTS.md  chunking.py  config_loader.py  context_enrichment.py  embedding.py  search.py  session.py
tests/contract/: test_openapi.py
tests/e2e/: conftest.py  stubs.py  test_advanced_flows.py  test_documents.py  test_full_generation.py  test_health.py  test_incremental.py  test_job_lifecycle.py  test_repository_crud.py  test_search.py  test_webhooks.py
tests/e2e_seed/: seed_playwright.py
web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: index.css  (+3 more)
(+309 files in other folders)
